fix: added invisible relative container for figures, fixed text typing animation

--- a/style.css
+++ b/style.css
@@ -26,13 +26,12 @@ main {
 
 /**/
 .textStyle .yellowBlock {
-    min-width: 90%;
     position: relative;
     height: 60px;
 }
 
 .textStyle .yellowBlock img {
-    min-width: 50%;
+    min-width: 30%;
 }
 
 .yellowBlock > img{
@@ -120,6 +119,8 @@ main > img { /*Убрать потом*/
 }
 
 .yellowTriangles._anim-items {
+    position: absolute;
+
     top: 50%;
     right: 12%;
     width: 5%;
@@ -134,6 +135,7 @@ main > img { /*Убрать потом*/
 }
 
 .redTriangle._anim-items {
+    position: absolute;
     min-width: 10%;
 
     right: 3%;
@@ -163,6 +165,7 @@ main > img { /*Убрать потом*/
 }
 
 .redWaves._anim-items{
+    position: absolute;
     top: 180%;
     right: 23%;
     width: 13%;
@@ -175,6 +178,8 @@ main > img { /*Убрать потом*/
 }
 
 .redRoundedWaves._anim-items {
+    position: absolute;
+
     top: 135%;
     left: -10%;
 
@@ -187,6 +192,7 @@ main > img { /*Убрать потом*/
 }
 
 .yellowVerticalBlock {
+    position: absolute;
     width: 7%;  
 }
 
@@ -208,28 +214,30 @@ main > img { /*Убрать потом*/
 }
 
 .yellowVerticalBlock2 {
+    position: absolute;
     width: 8%;
 }
 
 .yellowVerticalBlock2._anim-items{
-    top: 238%;
-    right: 15%;
+    top: 0%;
+    right: 0%;
     z-index:1;
     transition: top 1s ease, right 1s ease;
 }
 
 .yellowVerticalBlock2._anim-items.active-anime{
-    top: 247%;
-    right: 18%;
+    top: 10%;
+    right: 10%;
 }
 
 .yellowVerticalBlockBlack2{
     z-index:2;
-    top: 243%;
-    right: 17%;
+    top: 10%;
+    right: 10%;
 }
 
 .redRoundedWaves2._anim-items {
+    position: absolute;
     top: 340%;
     left: -10%;
 
@@ -242,6 +250,8 @@ main > img { /*Убрать потом*/
 }
 
 .blueWaves2._anim-items {
+    position: absolute;
+    
     top: 370%;
     right: 20%;
 
@@ -253,6 +263,7 @@ main > img { /*Убрать потом*/
 }
 
 .redWaves2._anim-items {
+    position: absolute;
     top: 220%;
     left: 35%;
     width: 13%;
@@ -266,6 +277,8 @@ main > img { /*Убрать потом*/
 }
 
 .aLotOfDots2._anim-items {
+    position: absolute;
+
     top: 290%;
     right: 25%;
     width: 8%;
@@ -283,6 +296,8 @@ main > img { /*Убрать потом*/
 }
 
 .yellowTriangles2._anim-items{
+    position: absolute;
+
     top: 260%;
     opacity: 0;
 
@@ -299,6 +314,8 @@ main > img { /*Убрать потом*/
 }
 
 .redTriangle2._anim-items {
+    position: absolute;
+
     left: 5%;
     top: 370%;
     width: 10%;
@@ -325,6 +342,8 @@ main > img { /*Убрать потом*/
 }
 
 .angle2._anim-items{
+    position: absolute;
+
     top: 330%;
     right: 5%;
 
@@ -350,6 +369,7 @@ main > img { /*Убрать потом*/
 }
 
 .angle._anim-items{
+    position: absolute;
     top : 125%;
     right: 5%;
 
@@ -375,14 +395,20 @@ main > img { /*Убрать потом*/
 }
 
 .toolsPos {
+    position: absolute;
     top: 205%;
     width: 70%;
 }
 
 /**/
 
-.infoContent {
+.relativeFigures {
     position: relative;
+}
+
+/**/
+
+.infoContent {
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
@@ -435,7 +461,7 @@ main > img { /*Убрать потом*/
 }
 
 .nameText {
-    position: relative;
+
 }
 
 .nameText > h4:first-child {
